# stbchef

./: .env.example  .gitignore  =4.5.0  CODEOWNERS  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  Procfile  README.md  hardhat.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  render.yaml  review
.github/workflows/: ci.yml  pages.yml
artifacts/@openzeppelin/contracts/security/ReentrancyGuard.sol/: ReentrancyGuard.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/ERC20.sol/: ERC20.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/extensions/IERC20Metadata.sol/: IERC20Metadata.dbg.json
artifacts/contracts/SimpleSwap.sol/: IERC20.json  SimpleSwap.dbg.json  SimpleSwap.json
artifacts/contracts/SmartAccount.sol/: SmartAccount.json
artifacts/contracts/mocks/MockUSDC.sol/: MockUSDC.dbg.json  MockUSDC.json
cache/: solidity-files-cache.json
contracts/: SimpleSwap.sol  SmartAccount.sol
contracts/mocks/: MockUSDC.sol
docs/: api.md  architecture.md  contracts.md  getting-started.md  index.md
e2e/: smoke.spec.ts
scripts/: deploy-mock-usdc.js  deploy.js  extract-addresses.js  update-contract-addresses.js  update-frontend-addresses.js  verify.js
src/: __init__.py  state.py
src/agents/: __init__.py  market_data.py  state.py
src/database/: db.py
src/tools/: __init__.py  etherscan_api.py  fear_greed_api.py  gas_price_api.py  gemini_api.py  groq_api.py  mistral_api.py
src/web/: app.py
src/web/static/css/: styles.css
src/web/static/js/: chartHandlers.js  clear-storage.js  marketAnalysis.js  modelPredictions.js  moduleLoader.js  notificationManager.js  smartAccount.js  statsManager.js  swapManager.js  utils.js  walletCore.js  walletManager.js  walletUI.js
src/web/templates/: clear-storage.html  index.html  test_stats.html
test/: simpleSwap.reverts.test.js  simpleSwap.test.js  smartAccountGas.test.js
tests/: test_placeholder.py
