[tool.poetry]
name = "stbchef"
version = "1.0.0"
description = "Simple Crypto Trading Bot Chef - Compare AI Models in Crypto Trading"
authors = ["qbandev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.1"
werkzeug = "^2.0.1"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
google-generativeai = "^0.3.1"
mistralai = "^0.0.7"
groq = "^0.4.0"
web3 = "^6.10.0"
flask-limiter = "^3.5.0"
flask-talisman = "^1.0.0"
httpx = "0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.web.app:main" 